--- a/index.html
+++ b/index.html
@@ -1,29 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="style_index.css" />
   <meta charset="utf-8">
-  <title>Ogłoszenia lokalne</title>
+  <title>Ogłoszenia lokalne :: Strona główna</title>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
-<div id="strona">
-  <div id="naglowek">
+<div id="page">
+  <a href="index.html" style="color: #000;"><div id="naglowek">
     <h1>Ogłoszenia lokalne</h1>
-    <h2>Szybki sposób na znalezienienie tego, czego potrzebujesz</h2>
+  </div></a>
+  <div id="navbar">
+    <div class="nav"><a href="index.html">Strona główna</a></div>
+    <div class="nav"><a href="o_nas.html">O nas</a></div>
+    <div class="nav"><a href="cennik.html">Cennik</a></div>
+    <div class="nav"><a href="kontakt.html">Kontakt</a></div>
   </div>
-  <div id="menu">
-    <a href="index.html">Home</a>
-    <a href="#">Home</a>
-    <a href="#">Home</a>
-    <a href="#">Home</a>
+  <div id="content">
+    <div class="classifieds">
+      <h2>Znajdź to, czego potrzebujesz!</h2>
+      <p>Potrzebujesz domu, kota, a może samochodu? Ta strona jest
+        właśnie dla Ciebie! Ogłoszenia posortowane są w pięciu
+        kategoriach, abyś łatwo mógł znaleźć interesującą Cię
+        rzecz. Zachęcamy do przejrzenia ich wszystkich!</p>
+      <p class="small">~Zespół Ogłoszeń lokalnych</p>
+      <div class="category">
+        <a href="praca.html"><div class="ad">
+          <h3>Praca</h3>
+        </div></a>
+        <a href="moto.html"><div class="ad">
+          <h3>Motoryzacja</h3>
+        </div></a>
+        <a href="home.html"><div class="ad">
+          <h3>Nieruchomości</h3>
+        </div></a>
+        <a href="pet.html"><div class="ad">
+          <h3>Zwierzęta</h3>
+        </div></a>
+        <a href="elektronika.html"><div class="ad">
+          <h3>Sprzęt elektroniczny</h3>
+        </div></a>
+      </div>
+    </div>
   </div>
-  <div id="tresc">
-    <div class="tresc">Tresc</div>
-    <div class="tresc">tresc</div>
-    <div class="tresc">tresc</div>
-  </div>
-  <div></div>
-  <div id="stopka"></div>
+  <div class="clear"></div>
+  <div id="footer">Copyright &copy; Łukasz Jalowski 2018</div>
 </div>
+
 </body>
 </html>
